--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ build
 api
 CBLocation.xcodeproj/*.mode1v3
 CBLocation.xcodeproj/*.pbxuser
+CBLocation.xcodeproj/project.xcworkspace
+CBLocation.xcodeproj/xcuserdata
