--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ CBLocation.xcodeproj/*.mode1v3
 CBLocation.xcodeproj/*.pbxuser
 CBLocation.xcodeproj/project.xcworkspace
 CBLocation.xcodeproj/xcuserdata
+DerivedData
